<resources>
    <string name="app_name">Semeru Town Watch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps">Maps</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="post">Post</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="bencana_alam">Bencana Alam</string>
    <string name="menyukai">Menyukai</string>
    <string name="icon">icon</string>
    <string name="_0">0</string>
    <string name="tulis_komentar">Tulis Komentar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, dui non posuere varius, dui nibh porta velit, at feugiat mauris libero ac neque. Ut sed dolor porta, mattis urna et, feugiat tortor. </string>
    <string name="pilih_bencana">Pilih Bencana</string>
    <string name="tingkat_keparahan">Tingkat Keparahan</string>
    <string name="level_bencana">Level Bencana</string>
    <string name="address">Pronojiwo, Kabupaten Lumajang </string>
    <string name="email">Email</string>
    <string name="co_foo_bar_com">co: foo@bar.com</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="semeru_town_watch">Town Watch Semeru</string>
    <string name="tulis_deskripsi">Tulis Deskripsi</string>
    <string name="category_user">Category User</string>
    <string name="logout">Logout</string>
    <string name="image">image</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="password_sekarang">Password Sekarang</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="password_tidak_sesuai">Password tidak sesuai</string>
    <string name="password_minimal_6_karakter">Password minimal 6 karakter</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="filter_kategori">Filter Kategori</string>
    <string name="kamera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="date">Date</string>
    <string name="rute_ke_jalur_evakuasi">Rute ke Jalur Evakuasi</string>
    <string name="nama">Nama : </string>
    <string name="tanggal">Tanggal : </string>
    <string name="alamat">Alamat : </string>
    <string name="kategori">Kategori : </string>
    <string name="category">Category</string>
    <string name="masuk_menggunakan_akun_anda">Masuk Menggunakan Akun Anda</string>
    <string name="masuk">Masuk</string>
    <string name="anda_belum_memiliki_akun">Anda Belum Memiliki Akun?</string>
    <string name="daftar"> Daftar</string>
    <string name="lengkapi_isian_dibawah_ini_untuk_nmelakukan_pendaftaran">Lengkapi Isian Dibawah Ini Untuk\nMelakukan Pendaftaran</string>
    <string name="nama_register">Nama</string>
    <string name="anda_sudah_memiliki_akun">Anda Sudah Memiliki Akun?</string>
    <string name="masyarakat_umum">Masyarakat Umum</string>
    <string name="status">Status</string>
    <string name="beranda">Beranda</string>
    <string name="peta">Peta</string>
    <string name="buat_laporan">Buat Laporan</string>
    <string name="profil">Profil</string>
    <string name="kerusakan">Kerusakan</string>
    <string name="hapus_filter_kategori">Hapus Filter Kategori</string>
    <string name="masyarakat">Masyarakat</string>
    <string name="level">Level</string>
    <string name="komentar">Komentar</string>
    <string name="hapus_laporan">Hapus Laporan</string>
    <string name="edit_laporan">Edit Laporan</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="nama_">Nama</string>
    <string name="email_tidak_dapat_diubah">Email (Tidak dapat diubah)</string>
    <string name="ubah_laporan">Ubah Laporan</string>
    <string name="gambar_amp_lokasi_tidak_dapat_diubah"><![CDATA[Gambar & Lokasi tidak dapat diubah]]></string>
    <string name="tuliskan_deskripsi">Tuliskan Deskripsi</string>
    <string name="pilih_level">Pilih Level</string>
    <string name="pilih_status">Pilih Status</string>
    <string name="harap_tunggu_sebentar">Harap Tunggu Sebentar...</string>
    <string name="jadilah_yang_pertama_mengomentari_laporan_ini">Jadilah yang pertama mengomentari laporan ini.</string>
    <string name="belum_ada_laporan">Belum ada laporan...</string>
    <string name="belum_ada_laporan_yang_disukai">Belum ada laporan yang disimpan...</string>
    <string name="laporan_telah_diupdate">(Laporan telah diupdate)</string>
    <string name="send_code_register">Kami telah mengirimkan 4 digit kode verifikasi ke email anda, masukkan kode tersebut ke kolom yang tersedia di bawah ini</string>
    <string name="verifikasi_akun">Verifikasi Akun</string>
    <string name="kirim_ulang_kode">Kirim ulang kode</string>
    <string name="belum_mendapatkan_kode">Belum mendapatkan kode?</string>
    <string name="lupa_password_anda">Lupa Kata Sandi?</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="cari_akun_anda">Cari Akun Anda</string>
    <string name="masukkan_email_yang_didaftarkan_ke_akun_anda">Masukkan email yang didaftarkan ke akun anda</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="reset_password">Reset Password</string>
    <string name="pilih_detail_bencana">Pilih Detail Bencana</string>
    <string name="erupsi">Erupsi</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="lokasi">Lokasi :</string>
    <string name="menyimpan">Menyimpan</string>
    <string name="info">info simbol</string>
    <string name="informasi_simbol_pada_peta">Informasi Simbol Pada Peta</string>
    <string name="navigasi_ke_titik_kumpul">Navigasi ke Titik Kumpul</string>
    <string name="buku_saku">Buku Saku</string>
    <string name="erupsi_gunung_api">Erupsi Gunung Api</string>
    <string name="klik_untuk_erupsi">Klik untuk menampilkan informasi siap siaga terhadap bencana erupsi gunung api</string>
    <string name="gempa_bumi">Gempa Bumi</string>
    <string name="klik_untuk_bencana">Klik untuk menampilkan informasi siap siaga terhadap bencana gempa bumi</string>
    <string name="isi_data_dengan_benar">Isi data dengan benar</string>
    <string name="lokasimu">Lokasimu:</string>
    <string name="update_lokasi">Update Lokasi</string>
    <string name="_10_september_2022">10 September 2022</string>
    <string name="time">17:01:14 WIB</string>
    <string name="lihat_semua_kategori">Lihat Semua</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="letusan_gunung_semeru_desember_2022">Letusan Gunung Semeru Desember 2022</string>
    <string name="laporan_aktif">Laporan Aktif</string>
    <string name="kerusakan_berat">Kerusakan </string>
    <string name="pendaftaran_pengguna_baru">Pendaftaran Pengguna Baru</string>
    <string name="dipersembahkan_oleh">DIPERSEMBAHKAN OLEH:</string>
    <string name="selamat_datang_di_aplikasi_semeru_town_watch">SELAMAT DATANG DI APLIKASI SEMERU TOWN WATCH</string>
    <string name="first_user_manual">Aplikasi Town Watch yang dipersembahkan oleh Universitas Brawijaya merupakan sarana atau wadah pelaporan potensi bencana yang ditujukan untuk mempermudah proses persebaran informasi bencana yang terjadi di lingkungan masyarakat.</string>
    <string name="laporkan_kejadian_kebencanaan_dengan_mudah">LAPORKAN KEJADIAN KEBENCANAAN DENGAN MUDAH</string>
    <string name="user_manual_second">Pelaporan di aplikasi akan mempermudah setiap elemen masyarakat dalam upaya mitigasi bencana dengan melaporakan setiap kejadian kebencanaan yang terjadi menggunakan dawai dan diterima oleh pengguna lain.</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="siap_siaga_bencana_bersama_aplikasi_semeru_town_watch">SIAP SIAGA BENCANA BERSAMA APLIKASI SEMERU TOWN WATCH</string>
    <string name="user_manual_third">Tingkatkan kesiap siagaan anda akan bencana, ketahui semua informasi yang terjadi disekitar daerah anda, dan kurangi resiko jatuhnya korban jiwa karena bencana yang terjadi.</string>
    <string name="bahaya_erupsi">Bahaya erupsi gunungapi memiliki dua jenis bahaya berdasarkan waktu kejadian, yaitu bahaya primer dan sekunder. Berikut ini bahaya dari erupsi gunungapi.\n\nInstitusi teknis terkait dengan kegunungapian adalah Pusat Vulkanologi dan Mitigasi Bencana Geologi (PVMBG). Informasi terkait gunungapi dapat dilihat pada laman berikut: http://www.vsi.esdm.go.id/</string>
    <string name="lihat_selengkapnya"><![CDATA[Lihat Selengkapnya >]]></string>
</resources>