<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/app_logo"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image"
        android:layout_marginTop="80dp"/>
    <TextView
        style="@style/TextViewSemeru"
        android:text="@string/semeru_town_watch"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/blue_stw"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        />

    <TextView
        style="@style/TextViewSemeru"
        android:textColor="@color/blue_stw"
        android:text="@string/masuk_menggunakan_akun_anda"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/et_email"
        style="@style/FormSemeru"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/FormSemeru"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="25dp"
        android:layout_marginTop="13dp"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/btn_lupa_password"
        style="@style/TextViewSemeru"
        android:text="@string/lupa_password_anda"
        android:textColor="@color/blue_stw"
        android:textSize="18sp"
        android:layout_marginVertical="15dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonSemeru"
        android:paddingHorizontal="25dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/masuk"/>

    <LinearLayout
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">
        <TextView
            style="@style/TextViewSemeru"
            android:text="@string/anda_belum_memiliki_akun"
            android:textColor="@color/blue_stw"
            android:textSize="18sp"/>

        <TextView
            style="@style/TextViewSemeru"
            android:text="@string/daftar"
            android:textColor="@color/orange_stw"
            android:textSize="18sp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

</LinearLayout>