<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".presentation.edit_password.EditPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/brown_primary"
            android:contentDescription="@string/icon" />

        <TextView
            style="@style/TextViewSemeru.bold"
            android:layout_centerInParent="true"
            android:text="@string/edit_password"
            android:textColor="@color/blue_stw"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        style="@style/TextViewSemeru"
        android:layout_marginTop="8dp"
        android:text="@string/password_sekarang"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_current_password"
        style="@style/FormSemeru"
        android:hint="@string/masukkan_password"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        android:layout_marginVertical="5dp"
        android:autofillHints="emailAddress" />

    <TextView
        style="@style/TextViewSemeru"
        android:text="@string/password_baru"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_new_password"
        style="@style/FormSemeru"
        android:hint="@string/masukkan_password"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        android:layout_marginVertical="5dp"
        android:autofillHints="emailAddress" />
    <TextView
        android:id="@+id/tv_alert_password"
        style="@style/TextViewSemeru"
        android:text="@string/password_minimal_6_karakter"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:visibility="gone"
        />

    <TextView
        style="@style/TextViewSemeru"
        android:text="@string/konfirmasi_password_baru"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_confirm_new_password"
        style="@style/FormSemeru"
        android:hint="@string/masukkan_password"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        android:layout_marginVertical="5dp"
        android:autofillHints="emailAddress" />
    <TextView
        android:id="@+id/tv_alert_confirm_password"
        style="@style/TextViewSemeru"
        android:text="@string/password_tidak_sesuai"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_edit_password"
        style="@style/ButtonSemeru"
        android:layout_marginTop="5dp"
        android:text="@string/edit_password"/>


</LinearLayout>