<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".presentation.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/app_logo_small"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image" />

            <TextView
                style="@style/TextViewSemeru"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:textSize="16sp" />
        </LinearLayout>


        <TextView
            style="@style/TextViewSemeru"
            android:text="@string/pendaftaran_pengguna_baru"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/et_nama"
            style="@style/FormSemeru"
            android:hint="@string/nama_register"
            android:inputType="text"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="40dp"
            android:autofillHints="emailAddress" />

        <TextView
            android:id="@+id/tv_alert_name"
            style="@style/TextViewSemeru"
            android:text="@string/password_minimal_6_karakter"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/et_email"
            style="@style/FormSemeru"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress" />

        <TextView
            android:id="@+id/tv_alert_email"
            style="@style/TextViewSemeru"
            android:text="@string/password_minimal_6_karakter"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/et_password"
            style="@style/FormSemeru"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="32dp"
            android:autofillHints="password" />

        <TextView
            android:id="@+id/tv_alert_password"
            style="@style/TextViewSemeru"
            android:text="@string/password_minimal_6_karakter"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonSemeru"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="25dp"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/daftar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp">
        <TextView
            style="@style/TextViewSemeru"
            android:text="@string/anda_sudah_memiliki_akun"
            android:textSize="18sp"/>

        <TextView
            style="@style/TextViewSemeru"
            android:text="@string/masuk"
            android:layout_marginStart="5dp"
            android:textColor="@color/orange_stw"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>