<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".presentation.user_manual.UserManualSecondFragment">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextViewSemeru.bold"
        android:layout_marginTop="70dp"
        android:text="@string/laporkan_kejadian_kebencanaan_dengan_mudah"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextViewSemeru"
        android:text="@string/user_manual_second"
        android:layout_below="@id/tv_title"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        android:layout_marginTop="50dp"
        tools:targetApi="o" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_second_user_maual"
        android:layout_below="@+id/tv_description"
        android:contentDescription="@string/image"/>

    <Button
        android:id="@+id/btn_next"
        style="@style/ButtonSemeru"
        android:layout_width="wrap_content"
        android:text="@string/selanjutnya"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        style="@style/ButtonSemeru"
        android:paddingHorizontal="20dp"
        android:layout_width="wrap_content"
        android:background="@drawable/style_button_white"
        android:text="@string/sebelumnya"
        android:textColor="@color/orange_stw"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>