<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.update_profile.UpdateProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:backgroundTint="@color/brown_primary"
                android:contentDescription="@string/icon" />

            <TextView
                style="@style/TextViewSemeru.bold"
                android:layout_centerInParent="true"
                android:text="@string/ubah_profil"
                android:textColor="@color/blue_stw"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            style="@style/TextViewSemeru"
            android:layout_marginTop="8dp"
            android:text="@string/nama_"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_nama"
            style="@style/FormSemeru"
            android:hint="@string/nama_register"
            android:inputType="text"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress" />

        <TextView
            android:id="@+id/tv_alert_name"
            style="@style/TextViewSemeru"
            android:text="@string/password_minimal_6_karakter"
            android:textSize="14sp"
            android:textColor="@color/red"
            android:visibility="gone"
            />

        <TextView
            style="@style/TextViewSemeru"
            android:layout_marginTop="8dp"
            android:text="@string/email_tidak_dapat_diubah"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/et_email"
            style="@style/FormSemeru"
            android:hint="@string/email"
            android:inputType="none"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="13dp"
            android:autofillHints="emailAddress"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btn_update_profile"
            style="@style/ButtonSemeru"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="25dp"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ubah_profil"/>
    </LinearLayout>

</ScrollView>