<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.forgot_password.ForgotPasswordFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:translationZ="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/image"
                android:src="@drawable/app_logo" />

            <TextView
                style="@style/TextViewSemeru"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/lupa_password"
                android:textColor="@color/blue_stw"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/TextViewSemeru.bold"
        android:text="@string/cari_akun_anda"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="250dp"
        style="@style/TextViewSemeru"
        android:text="@string/masukkan_email_yang_didaftarkan_ke_akun_anda"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_email"
        style="@style/FormSemeru"
        android:hint="@string/email"
        android:layout_marginHorizontal="20dp"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress" />

    <Button
        android:id="@+id/btn_next"
        style="@style/ButtonSemeru"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="25dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/selanjutnya"/>

</LinearLayout>